src/scss/structure/_style.scss
@import 'config';

* {
    box-sizing: border-box;
}
div, header, nav, main, footer, section, article, aside {
    position: relative;
}
body {
    margin: 0px;
    font-family: sans-serif;
    background: $background;
}
.header {
    background: $blue;
    display: flex;
    flex-wrap: wrap;
}
.header-button {
    font-size: 14px;
    line-height: 16px;
    padding: #{(50 - 16)/2}px 15px;
    text-decoration: none;
    color: white;

    &:hover {
        background: $darkblue;
    }
}
.main-button {
    background: $darkblue;
    width: 230px;
    text-align: center;
    font-size: 20px;
    line-height: 20px;
    padding: 15px;
    margin-right: auto;

    @media (max-width: $medium) {
        width: 100%;
    }
}
.menu-toggle {
    margin-right: auto;
    @media (min-width: #{$medium + 1px}) {
        display: none;
    }
}
.header-pane-close {
    display: none;
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background: rgba(0,0,0,.5);
    z-index: 9;
    .header-pane:target+& {
        display: block;
    }
}
.header-pane {
    position: absolute;
    background: white;
    right: 20px;
    top: 52px;
    margin-top: 0px;
    display: none;
    z-index: 10;
    &:target {
        display: block;
    }
    @media (max-width: $medium) {
        top: 102px;
    }
}
.ticket-pane {
    list-style: none;
    padding: 0px;
    min-width: 250px;
    margin-bottom: 0px;
    max-height: calc(100vh - 52px);
    overflow-y: auto;
    @media (max-width: $medium) {
        max-height: calc(100vh - 102px);
    }
}
.ticket-link {
    display: block;
    padding: 15px;
    border-bottom: 1px solid $snow;
    text-decoration: none;
}
.ticket-title {
    color: black;
}
.ticket-description {
    display: block;
    color: $gray;
    margin-top: 3px;
}
.user-pane {
    width: 250px;
    height: 250px;
}
.user-background {
    background: $blue;
    height: 200px;
    color: white;
    text-align: center;
    padding-top: 50px;
}
.user-icon {
    font-size: 60px !important;
    display: block !important;
    margin-bottom: 5px;
}
.user-buttons {
    display: flex;
}
.user-btn {
    margin: auto;
    display: block;
    height: 34px;
    border: 1px solid $snow;
    font-size: 13px;
    color: $gray;
    margin-top: 8px;
    padding: 0px 15px;
    line-height: 34px;
    text-decoration: none;
}
/**************************/
.container {
    display: flex;
    align-items: stretch;
    min-height: calc(100vh - 50px);
}
.menu {
    background: $softblack;
    width: 230px;
    overflow: hidden;
    z-index: 5;
    @media (max-width: $medium) {
        align-self: flex-start;
        transition: max-height 1s;
        width: 100%;
        max-height: 0px;
        position: absolute;
        &:target {
            max-height: 100%;
            animation-name: show_close_menu;
            animation-duration: 1s;
            overflow: visible;
        }
    }
}
@keyframes show_close_menu {
    0% {overflow: hidden}
    99% {overflow: hidden}
    100% {overflow: visible}
}
.search {
    width: 100%;
    padding: 10px;
    display: flex;
}
.search-input {
    width: calc(100% - 37px);
    height: 37px;
    padding: 0px 10px;
    background: $darkgray;
    border: none;
    border-radius: 5px 0px 0px 5px;
    color: $gray;
    outline: none;
    &::placeholder {
      color: $lightgray;
    }
    &:focus {
        background: white;
    }
}
.search-submit {
    width: 37px;
    height: 37px;
    background: $darkgray;
    border: none;
    border-radius: 0px 5px 5px 0px;
    color: $lightgray;
    cursor: pointer;
    .search-input:focus+& {
        background: white;
        color: $gray;
    }
}
.menu-link {
    display: block;
    padding: 12px 15px;
    border-left: 3px solid transparent;
    font-size: 14px;
    line-height: 20px;
    color: $snow;
    text-decoration: none;
    transition: background .2s;
    &:hover {
        background: darken($black, 8);
        border-left-color: $blue;
    }
}
.menu-active {
    color: white;
    background: darken($black, 5);
    border-left-color: $blue;
}
.menu-close {
    position: absolute;
    margin-top: -50px;
}
/************************/
.content {
    padding: 5px 20px;
    width: calc(100% - 230px);
    @media (max-width: $medium) {
        width: 100%;
    }
}
.content-title {
    margin: 7px 0px;
    font-size: 25px;
}

